src/test/rustdoc-ui/intra-doc-alias-ice.stderr
error: unresolved link to `TypeAlias::hoge`
  --> $DIR/intra-doc-alias-ice.rs:5:30
   |
LL | /// [broken cross-reference](TypeAlias::hoge)
   |                              ^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/intra-doc-alias-ice.rs:1:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   = note: this link partially resolves to the type alias `TypeAlias`,
   = note: `TypeAlias` has no field, variant, or associated item named `hoge`

error: aborting due to previous error

